# printf-but-new

./: .clangd  LICENSE  README.md  meson.build
include/: new.hpp  new_printf.hpp
source/: main.cpp  new_printf.cpp
